@@ -1,3 +1,9 @@
+2003-08-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/enable-tests.m4: Change to support
+	--enable-tests=no|yes|samples, default is samples.
+	* configure.ac: Reflect changes above.
+
 2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Reflect having moved aclocal/.
